crates/katto-engine/src/emit/snapshots/katto_engine__emit__fcpxml__tests__fcpxml_ntsc_df.snap
---
source: crates/katto-engine/src/emit/fcpxml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
  <resources>
    <format id="r1" frameDuration="1001/30000s" colorSpace="1-1-1 (Rec. 709)"/>
    <asset id="r2" name="clip.mp4" start="0s" duration="10s" hasVideo="1" hasAudio="1" format="r1" audioSources="1" audioChannels="2" audioRate="48000">
      <media-rep kind="original-media" src="file:///media/clip.mp4"/>
    </asset>
  </resources>
  <event name="katto">
    <project name="demo-v1">
      <sequence format="r1" duration="269269/30000s" tcStart="0s" tcFormat="DF" audioLayout="stereo" audioRate="48k">
        <spine>
          <asset-clip ref="r2" offset="0s" name="keep 1" start="0s" duration="30030/30000s" audioRole="dialogue">
            <asset-clip ref="r2" lane="-1" offset="30030/30000s" name="removed 1" start="30030/30000s" duration="30030/30000s" enabled="0" audioRole="dialogue"/>
          </asset-clip>
          <asset-clip ref="r2" offset="30030/30000s" name="keep 2" start="60060/30000s" duration="239239/30000s" audioRole="dialogue"/>
        </spine>
      </sequence>
    </project>
  </event>
</fcpxml>
