crates/katto-engine/src/emit/snapshots/katto_engine__emit__fcpxml__tests__fcpxml_unicode_src.snap
---
source: crates/katto-engine/src/emit/fcpxml.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE fcpxml>
<fcpxml version="1.11">
  <resources>
    <format id="r1" frameDuration="1/25s" colorSpace="1-1-1 (Rec. 709)"/>
    <asset id="r2" name="clip – プレビュー.mp4" start="0s" duration="10s" hasVideo="1" hasAudio="1" format="r1" audioSources="1" audioChannels="2" audioRate="48000">
      <media-rep kind="original-media" src="file:///media/clip%20%E2%80%93%20%E3%83%97%E3%83%AC%E3%83%93%E3%83%A5%E3%83%BC.mp4"/>
    </asset>
  </resources>
  <event name="katto">
    <project name="demo-v1">
      <sequence format="r1" duration="9s" tcStart="0s" tcFormat="NDF" audioLayout="stereo" audioRate="48k">
        <spine>
          <asset-clip ref="r2" offset="0s" name="keep 1" start="0s" duration="1s" audioRole="dialogue">
            <asset-clip ref="r2" lane="-1" offset="1s" name="removed 1" start="1s" duration="1s" enabled="0" audioRole="dialogue"/>
          </asset-clip>
          <asset-clip ref="r2" offset="1s" name="keep 2" start="2s" duration="8s" audioRole="dialogue"/>
        </spine>
      </sequence>
    </project>
  </event>
</fcpxml>
